# Android_Native_C

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  logutils.h  native-lib.cpp  utils.cpp
app/src/main/cpp/openssl/include/openssl/: opensslconf.h
app/src/main/java/com/example/nativec/: MainActivity.kt
app/src/test/java/com/example/nativec/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
